fix bug 367275 - download manager file folder icon is black (regression from 360000)

Only do premultiplication when the 32bit ico really has alpha - move
premultiplication to SetImageData from SetPixel and only premultiply
if mHaveAlpha is true.

The 'premultiplication' function has been copied from libpixman.

r=pavlov